--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 git add requirements.txt
-git commit -m "Pin OpenAI to v0.28 for compatibility"
+git commit -m "Fix: correct requirements format with openai==0.28"
 git push origin main
