--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
-git add requirements.txt
-git commit -m "Fix: correct requirements format with openai==0.28"
-git push origin main
+flask
+openai==0.28
